# translatoid

./: CMakeLists.txt  Messages.sh  README  ktranslatoid.cpp  ktranslatoid.h  languagemodel.cpp  languagemodel.h  plasma-applet-translatoid.desktop  reminder.cpp  reminder.h  reminderform.ui  struc_lng.h  translatoid.db
form/: languageform.ui  reminderform.ui
icons/: hisc-app-translator.svgz
po/: CMakeLists.txt  Messages.sh  fr.po  plasma_applet_translatoid.mo  translatoid.pot
